# facetracking-svn-to-git

branches/methods/: dynamic.conf.txt  settings.conf.txt
branches/methods/BTrackerCore/: Config.cpp  Controller.cpp  Controller.h  ControllerB.cpp  ControllerB.h  NullPredictor.h  RandomSampler.cpp  RandomSampler.h  Sample.h  Trace.h  qlearner.cpp  qlearner.h
branches/methods/BTrackerCore/algorithms/: CVHaar.cpp  CVHaar.h  CVHaarClient.cpp  PCA.h  PCADistance.cpp  PCADistance.h  PCAPose.cpp  (+3 more)
branches/methods/BTrackerUI/: BTrackerAppDelegate.h  BTrackerAppDelegate.m  main.m
trunk/: CMakeLists.txt  dynamic.conf.txt  settings.conf.txt  video.conf.txt
trunk/BTracker.xcodeproj/: project.pbxproj
trunk/BTrackerBatch/: main.cpp
trunk/BTrackerCore/: Config.h  ControllerB.cpp  Exception.h  Global.h  RandomSampler.cpp  Trace.cpp  qlearner.cpp
trunk/BTrackerCore/algorithms/: Analyzer.h  CVHaar.cpp  CVHaarClient.h  PCA.cpp  PCAFromFile.cpp  PCAFromFile.h  SVM.cpp  SVM.h  TrivialPredictor.cpp
trunk/BTrackerCore/video/: CVVideo.h  FFVideo.cpp  Video.cpp
trunk/BTrackerCore/warp/: CLController.cpp  CLController.h  CLWarp.cpp  CVOpticalFlow.h  CVWarp.cpp  CVWarp.h  Warp.h
trunk/BTrackerUI/: BTracker-Info.plist  BTrackerController.h  BTrackerController.mm  BTrackerPixelView.h  BTrackerPixelView.m  BTracker_Prefix.pch
trunk/Data/OpenCL/: Flow.cl
trunk/Data/Pose/Front/: B
trunk/Data/Pose/L45/: B
trunk/Data/Pose/Lprof/: B  lambda  m
trunk/Data/Pose/R45/: lambda  m
trunk/Data/Pose/Rprof/: lambda
trunk/Data/SVM/: B  m
wiki/: Compiling.wiki  Development.wiki
(+18 files in other folders)
